ecmascript/parser/tests/test262-error-references/fail/893986e2bbf8b7c5.js.stderr
error: Unexpected token `(`. Expected yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/893986e2bbf8b7c5.js:1:5
  |
1 | var ([x]) = 0
  |     ^

